fix(preloader): append to body to avoid z-index issues

--- a/packages/manager/modules/preloader/src/style.css
+++ b/packages/manager/modules/preloader/src/style.css
@@ -9,7 +9,7 @@
   display: flex !important;
 }
 
-#managerPreloader #nprogress .bar {
+#nprogress {
   background: #000e9c;
 }
 
